# conway.ops

./: .gitignore  setup.cfg
app_templates/: README.md
app_templates/101/config/: p.app._config.yaml  params.app_name._config.yaml  secrets.yaml
app_templates/101/p.project.svc/: setup.cfg  setup.py
app_templates/101/p.project.svc/src/p.app/: __init__.py
app_templates/101/p.project.svc/src/p.app/application/: p.app._application.py
app_templates/101/p.project.svc/src/p.app/database/: marketdata_data_hub.py
app_templates/101/p.project.svc/src/p.app/observability/: p.app_code._logger.py
app_templates/101/p.project.svc/src/p.app/services/: p.calc._service.py  p.calc._service_config.py
app_templates/101/p.project.svc/src/p.app/util/: static_globals.py
app_templates/101/params.app_code.svc/: .gitignore  setup.cfg
app_templates/101/params.app_code.svc/src/params.app_module/: __init__.py
app_templates/101/params.app_code.svc/src/params.app_module/application/: params.app_module._application.py
app_templates/101/params.app_code.svc/src/params.app_module/observability/: params.app_abbreviation_lower._logger.py
app_templates/101/params.app_code.svc/src/params.app_module/services/: calculator_service.py  calculator_service_config.py
app_templates/101/params.app_code.svc/src/params.app_module/util/: static_globals.py
src/conway_ops/database/: repos_data_hub.py
src/conway_ops/notebook_client/: notebook_utils.py
src/conway_ops/repo_admin/: branch_lifecycle_manager.py  chassis_repo_bundle.py  filesystem_repo_inspector.py  git_client.py  github_repo_inspector.py  repo_administration.py  repo_bundle.py  repo_bundle_subset.py  repo_inspector.py  repo_inspector_factory.py  repo_statics.py
src/notebooks/: chassis_nb_application.py  chassis_nb_utils.py
src/troubleshooting/: troubleshooter.py
(+7 files in other folders)
