[metadata]
name = {{ params.app_module }}

# Versioning numbers try to follow PEP 440
# https://www.python.org/dev/peps/pep-0440/
version = 0.1
#version = dev

author = {{ params.author }}
author_email = {{ params.author_email}}
license = MIT
description = {{ params.project_description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = # TODO 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.11
install_requires = 
    conway

[options.packages.find]
where = src

[options.package_data]

[options.entry_points]
console_scripts =
    # TODO ea = apodeixi.cli.apo_cli:apo_cli

